2013-10-06  Guha  <guhar@HG-01881061-LM8.local>

	* R/fingerprint.R (get.fingerprint): Included LINGO fingerprinter
	as an available fingerprint type

	* man/getfp.Rd: Updated man page to describe feature,count
	fingeprints. Added reference for signature fingerprint

	* R/fingerprint.R (get.fingerprint): Added support for the
	signature fingerprint. We also support the raw and count mode
	fingerprint types in general. If these modes are requested, the
	fingerprint is a featvec object

2013-01-05  Guha  <guhar@citdnstjonesr.cit.nih.gov>

	* man/getfp.Rd: Updated man page for new fingerprints

	* inst/unitTests/runit.rcdk.R (test.fp): Added some simple
	fingerprint test cases

	* R/rcdk.R (get.fingerprint): Updated to use the new
	IBitFingerprint interface. Added support for the Kelkota Roth and shortest
	path fingerprinters

	* Updated to latest CDK master, supporting new atom types

2012-11-17 Rajarshi Guha

	* R/iterating.R: Updated to use the proper class for iterating
	over SD files. Thanks to Xavier Arroyo for reporting this

2012-09-01  Rajarshi Guha  <guhar@Rajarshi-Guha-MacBook-Pro.local>

	* R/formula.R (get.mol2formula): Removed a debug statement

2012-07-05  Rajarshi Guha  <guhar@OfficeMac.local>

	* inst/unitTests/runit.match.R (test.match4): Added a unit test
	for the new matches update

	* man/match.Rd: Updated man page for the matches method
	to describe the new argument and return values

	* R/matching.R (matches): Updated SMARTS matching method to return
	the list of atom indices that correspond to the matching substructure

2012-06-20  Rajarshi Guha  <guhar@hg-01716957-lwx.nhgri.nih.gov>

	* R/smiles.R (parse.smiles): Updated code to recognize there
	is no longer a IMolecule class

	* R/atoms.R (get.charge): Updated code to recognize there
	is no longer a IMolecule class

	* R/desc.R (get.desc.names): Updated code to recognize there
	is no longer a IMolecule class

	* R/rcdk.R (get.title): Updated code to recognize there